--- a/style.css
+++ b/style.css
@@ -35,18 +35,84 @@
 /* home section*/
 .home{
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.2)), url(photos/home.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
 .home .content{
     text-align: center;
-    padding-top: 350px;
+    padding-top: 260px;
 }
 .home .content h5{
     color: white;
-    font-size: 75px;
+    font-size: 85px;
     font-weight: 500;
     text-shadow: 0px 1px 1px burlywood;
 }
+.home .content h1{
+    color: white;
+    font-size: 85px;
+    font-weight: 700;
+    text-shadow: 0px 1px 1px burlywood;
+    margin-top: 5px;
+}
+.home .content a{
+    padding: 20px;
+    background: white;
+    color: black;
+    letter-spacing: 2px;
+    font-weight: 700;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: 0,5s;
+}
+.home .content a:hover{
+    background-color: #ffa500;
+    color: antiquewhite;
+}
+/* end session home*/
+
+
+
+/* session card */
+.titre h2{
+    text-align: center;
+    margin-top: 30px;
+    font-weight: 800;
+    text-shadow: 0px px 1px black;
+}
+.titre h2 span{
+    color: #ffa500;
+}
+.card{
+    border-radius: 10px;
+    border: none;
+    box-shadow: rgba(0,0,0,0.1.) 0px 4px 12px;
+}
+.card img{
+    border-radius: 5px;
+}
+.card .card-body{
+    background: transparent;
+}
+.card .card-body a{
+    color: #f9f9f9;
+    background: #ffa500;
+    padding: 5px;
+    text-decoration: none;
+    border-radius: 5px;
+}
+/* end session card*/
+
+/* start session footer*/
+.titre h2{
+    text-align: center;
+    margin-top: 30px;
+    font-weight: 800;
+    text-shadow: 0px px 1px black;
+}
+.titre h2 span{
+    color: #ffa500;
+}
+/* end session footer*/
