--- a/style.css
+++ b/style.css
@@ -35,18 +35,18 @@
 /* home section*/
 .home{
     width: 100%;
-    height: 80vh;
+    height: 85vh;
     background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.2)), url(photos/home.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
 .home .content{
     text-align: center;
-    padding-top: 260px;
+    padding-top: 150px;
 }
 .home .content h5{
     color: white;
-    font-size: 85px;
+    font-size: 70px;
     font-weight: 500;
     text-shadow: 0px 1px 1px burlywood;
 }
@@ -55,7 +55,8 @@
     font-size: 85px;
     font-weight: 700;
     text-shadow: 0px 1px 1px burlywood;
-    margin-top: 5px;
+    margin-top: 10px;
+    margin-bottom: 50px;
 }
 .home .content a{
     padding: 20px;
